--- a/theory.tex
+++ b/theory.tex
@@ -1054,8 +1054,7 @@ This difference arises from the fact that the behaviour of the structure does no
 
 %% %}}}
 %}}}
-
-\section{Historical notes on metamaterials and photonic crystals}
+\section{Historical notes on metamaterials and photonic crystals}%{{{
 \subsection{One history of three paradigms} %{{{
 The scientific progress rarely follows a straightforward, efficient way. Making a brief historical review and following the development is therefore important to understand the current state of research, and possibly also the actual physical theory. 
 
@@ -1311,7 +1310,7 @@ The common property of structures operating at Bloch wavelengths of comparable m
 In the author's belief, it is necessary to adopt the full theory of spatial-dispersive media, as sketched in the Chapter \ref{chap_nonloc} of this thesis.
 
 %}}}
-
+%}}}
 
 \section{The boundary between photonic crystals and metamaterials} 
 In the light of the previous historical review, MMs and PhCs are divided by historical reasons as different paradigms that seem to have developed separately for most of the 20th century. At least in the author's view, both paradigms however undergo the process of unification, which incites the question whether there exist any objective rules to tell whether a given structure is a MM or a PhC.
@@ -1406,14 +1405,45 @@ An important question arises as to what extent the homogenization is applicable,
 
 Homogenization is not a search for an existing truth, but rather a somewhat arbitrary decision.
 
+\cite{Andryieuski2010homogenization}
+% classifies homog approaches into 1) s-parameters, 2) field averaging, 3) quasimode[17], 4) wave phenomena
+% elaborates no. 4 to unambiguously retrieve bulk parameters; but there is still one interface and the simulation volume is large
+\cite{Andryieuski2012-Blochmode_analysis_for_effparam.pdf}
+% 
+% 
+\cite{Hasar2011-Retrieval_of_effparam_bianisotropic.pdf}
+% 
+% 
+\cite{Chalapat2009-Wideband_reference_plane_invariant.pdf}
+% 
+% 
+\cite{Chen2004.pdf}
+% 
+% 
+\cite{Li2009.pdf}
+% 
+% 
+\cite{Rockstuhl2008.pdf}
+% 
+% 
+\cite{Silverinha-Metamaterial_homogenization.pdf}
+% 
+% 
+\cite{Smith2005-Elmg_parameter_retrieval_from_inhom_metamaterials.pdf}
+% 
+% 
+\cite{Szabo2010.pdf}
+% 
+% 
+\cite{Yang2010.pdf}
+% 
+% 
 
-
-Effective parameters
 
 %Chakrab.: The homogenizable metamaterials were assigned an effective permeability using the procedure described by Koschny et al [16]
 %[16] Th Koschny, P Markoš, D R Smith and C M Soukolis, Phys. Rev. B65, 195104 (2002)
 
-ref Homogenisation issues - response to our paper from OpEx
+%ref Homogenisation issues - response to our paper from OpEx
 \cite{rockstuhl2008transition}
 \cite{paul2011reflection}
 \cite{andryieuski2012bloch}
@@ -1423,9 +1453,7 @@ ref Homogenisation issues - response to our paper from OpEx
 \cite{simovski2011electromagnetic}
 \cite{mortensen2010unambiguous}
 % todo{Elaborate mathematical treatise on this topic: \cite{sjoberg2005floquet}}
-% A Floquet-Bloch decomposition of Maxwell's equations, applied to homogenization " The behavior of the solutions of a PDE with rapidly oscil-
-%   lating coefficients, considered over distances large compared to the oscillations, is in several respects similar to the solutions of a PDE with slowly varying coefficients.
-%   The problem of homogenization is to find these slowly varying coefficients by an ap- propriate limit process of the rapidly oscillating ones"
+% A Floquet-Bloch decomposition of Maxwell's equations, applied to homogenization " The behavior of the solutions of a PDE with rapidly oscillating coefficients, considered over distances large compared to the oscillations, is in several respects similar to the solutions of a PDE with slowly varying coefficients.   The problem of homogenization is to find these slowly varying coefficients by an ap- propriate limit process of the rapidly oscillating ones"
 
 %% todo "process of replacing a complex structure of subwavelength sized components with an “effective medium” with uni-
 %% form properties. It is a fundamentally important notion which can be traced back to the earliest days of electro-
